Bug 318182 - Multipart messages are displayed twice in KMail
Summary: Multipart messages are displayed twice in KMail
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: misc (other bugs)
Version First Reported In: Git (master)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Sandro Knauß
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-11 08:39 UTC by Luca Beltrame
Modified: 2013-04-11 14:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.3
Sentry Crash Report:


Attachments
Example of a message from plasma-devel which shows the behavior (110.42 KB, image/png)
2013-04-11 08:40 UTC, Luca Beltrame
Details
Raw message from the above screenshot (4.93 KB, text/plain)
2013-04-11 08:41 UTC, Luca Beltrame
Details
Another raw message which is mulitpart text+html (6.91 KB, text/plain)
2013-04-11 08:54 UTC, Torsten Grote
Details
Only signed mail, that is not doubled (78.75 KB, image/png)
2013-04-11 08:59 UTC, Sandro Knauß
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Beltrame 2013-04-11 08:39:46 UTC
When displaying messages with multipart contents (for example, signed emails,  or mails with mixed text / html content), KMail displays the content of the message twice. 

It is worth noting that the message itself is correct, it is only the display that is affected.
Screenshots are attached.

This behavior started appearing after the changes for message signing / encryption landed in master.

Reproducible: Always

Steps to Reproduce:
1. Choose a multipart message in KMail
2. Open the message or use the preview under the message list

Actual Results:  
Message content is displayed twice (see screenshot).

Expected Results:  
Message is displayed once.

Master as of yesterday.
Comment 1 Luca Beltrame 2013-04-11 08:40:52 UTC
Created attachment 78789 [details]
Example of a message from plasma-devel which shows the behavior
Comment 2 Luca Beltrame 2013-04-11 08:41:45 UTC
Created attachment 78790 [details]
Raw message from the above screenshot
Comment 3 Torsten Grote 2013-04-11 08:54:59 UTC
Created attachment 78791 [details]
Another raw message which is mulitpart text+html
Comment 4 Sandro Knauß 2013-04-11 08:59:53 UTC
Created attachment 78792 [details]
Only signed mail, that is not doubled

openpgp/mime signed - not doubled
Comment 5 Sandro Knauß 2013-04-11 14:40:29 UTC
Git commit 37319d960c048bf397e7f7ae0a1564d5eb749482 by Sandro Knauß.
Committed on 11/04/2013 at 13:37.
Pushed by knauss into branch 'KDE/4.10'.

Fix Bug 318182 - Multipart messages are displayed twice in KMail

Instead of showing another time the first text block the actual text of
one node is taken
FIXED-IN: 4.10.3
REVIEW: 109963

M  +1    -1    messageviewer/objecttreeparser.cpp

http://commits.kde.org/kdepim/37319d960c048bf397e7f7ae0a1564d5eb749482