Fix Bug 318182 - Multipart messages are displayed twice in KMail

Instead of showing another time the first text block the actual text of
one node is taken

BUG: 318182
FIXED-IN: 4.10.3
REVIEW: 109963